--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -29,6 +29,7 @@
 <body class="min-h-screen flex items-center justify-center overflow-hidden" style="background-color: #d7282f;">
     <div id="particles-js" class="absolute inset-0"></div>
 
+<div style="display:flex; align-items:center;justify-content:center;">
     <div class="relative z-10 w-full max-w-2xl px-4">
         <div id="formLoginContainer" class="rounded-3xl shadow-2xl p-12 fade-in" style="background-color: #e5e7eb;">
             <div class="text-center mb-10">
@@ -116,6 +117,8 @@
             </div>
         </div>
     </div>
+ </di>
+
 
     <script>
         
@@ -354,6 +357,10 @@
                 mensagemDiv.classList.add('hidden');
             }, 8000);
         });
+
+
+
+
     </script>
 </body>
 </html>
