--- a/Views/Home/_Graficos.cshtml
+++ b/Views/Home/_Graficos.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="flex justify-between items-center">
             <span class="text-sm text-gray-600  font-extrabold text-green-500">Vencedor atual</span>
-            <span id="miniTopWinner" class="font-semibold text-gray-800">-</span>
+            <span id="miniTopWinner" class="font-semibold text-gray-800 max-w-[150px] truncate inline-block" title="">-</span>
         </div>
     </div>
 
